--- a/ProjectsStyleSheet.css
+++ b/ProjectsStyleSheet.css
@@ -1,4 +1,8 @@
-﻿body {
+﻿html {
+    height: 100%;
+}
+
+body {
     background-color: #191b1f /*#0e171f #21262e*/;
     font-family: Arial;
 }
